# misskey-plugin-huaer-bot

./: README.md  demo.py  pyproject.toml
.github/workflows/: pypi_publish.yml
misskey_plugin_huaer_bot/: __init__.py  chat.py  config.py  config.toml  connector.py  poster.py
misskey_plugin_huaer_bot/misc/: example.md
