[tool.poetry]
name = "misskey-plugin-huaer-bot"
version = "1.0.1"
description = "基于Misskey智能对话插件，支持多频道管理和回复链记忆"
authors = ["HuaEr DevGroup <HuaEr_DevGroup@outlook.com>"]
readme = "README.md"
packages = [{include = "misskey_plugin_huaer_bot"}]
repository = "https://github.com/inkink365/misskey-plugin-huaer-bot"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
toml = "*"
requests = "*"
websockets = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"